--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "i18next": "^23.11.4",
+    "i18next-browser-languagedetector": "^7.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.1",
     "react-router-dom": "^6.23.0",
-    "sass": "^1.76.0"
+    "sass": "^1.77.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
